argocd/argocd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    svccontroller.k3s.cattle.io/enablelb: "false"  # Disables klipper-lb pod creation
spec:
  type: ClusterIP  # Change from LoadBalancer to ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080  # ArgoCD server listens on 8080 internally
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: argocd-server
